修复：闭环智能工作流终态恢复与全链路追踪